<resources>
    <string name="app_name">Final Project</string>
    <string name="tQuestion">Question goes here</string>
    <string name="tScore">score goes here</string>
    <string name="tUname">username </string>
    <string name="tCategory"> category</string>
    <string name="tDeleteButton">Delete</string>
    <string name="tSerialNumber">Sr. No.</string>
    <string name="tOptionA">option 1</string>
    <string name="tOptionB">option 2</string>
    <string name="tOptionC">option 3</string>
    <string name="tOptionD">option 4</string>
    <string name="tUsernameLabel">Enter Your Name</string>
    <string name="tUsernameHint">Your name</string>
    <string name="tCategoryLabel">Category</string>
    <string name="tCategoryHint">1 to 32</string>
    <string name="tNumberOfQuestionsLabel">No, of questions</string>
    <string name="tNumberOfQuestionsHint">MAX 50</string>
    <string name="tLoginButtonText">Login</string>
    <string name="tShowResult">Show Result</string>
    <string name="tSubmitButton">Submit</string>
    <string name="totalquestion">Total Questions</string>
    <string name="enter_airport_code">Enter airport code</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>

    <string name="destination_text">Destination Goes Here</string>
    <string name="terminal_text">Terminal: Terminal Goes Here</string>
    <string name="gate_text">Gate: Gate Goes Here</string>
    <string name="delay_text">Delay: Delay Goes Here</string>
    <string name="save_details_text">Save details</string>

    <string name="flight_number_label">Flight Number:</string>
    <string name="flight_number">flight_number</string>
    <string name="destination_label">Destination:</string>
    <string name="destination_des">destination</string>
    <string name="airline_logo_desc">Airline Logo</string>

    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">"Enter the airport code and click 'Search' to fetch flights. Click 'Saved' to view saved flights."</string>

    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_flight_question">Are you sure you want to delete this flight?</string>
    <string name="flight_details_saved">Flight details saved!</string>
    <string name="flight_deleted">Flight %1$s deleted!</string>
    <string name="flight_not_found">Flight not found!</string>

    <string name="enter_amount">Enter amount</string>
    <string name="source_currency">Source Currency</string>
    <string name="target_currency">Target Currency</string>
    <string name="convert">Convert</string>
    <string name="show_saved_conversions">Show Saved Conversions</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="help_title">How to Use</string>
    <string name="help_message">1. Enter the amount you want to convert.\n 2. Specify the source and destination currency.\n 3. Click on Convert to see the conversion result.\n 4. Use Swap to reverse the currency conversion.\n 5. View saved conversions by clicking on Show Saved Conversions.\n Note: Ensure you have an active internet connection.</string>
    <string name="help_positive_button">Got it</string>

</resources>