<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tSerialNumber"
                android:layout_marginRight="5dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tQuestion"
                android:textSize="18sp"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tOptionA"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tOptionB"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tOptionC"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tOptionD"
                android:textSize="18sp" />

        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>