<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CurrencyActivity">

    <!-- EditText for entering the amount of money -->
    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencytoolbar" />

    <EditText
        android:id="@+id/sourceCurrencyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/source_currency"
        app:layout_constraintEnd_toStartOf="@+id/swapImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

    <ImageButton
        android:id="@+id/swapImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_convert"
        app:layout_constraintEnd_toStartOf="@+id/destinationCurrencyEditText"
        app:layout_constraintStart_toEndOf="@+id/sourceCurrencyEditText"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

    <EditText
        android:id="@+id/destinationCurrencyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/target_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/swapImageButton"
        app:layout_constraintTop_toTopOf="@+id/sourceCurrencyEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="2dp"
        android:text="@string/convert"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationCurrencyEditText" />

    <TextView
        android:id="@+id/convertedAmountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/converted_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <Button
        android:id="@+id/btnShowSavedConversions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_saved_conversions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertedAmountText" />

</androidx.constraintlayout.widget.ConstraintLayout>
