<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/airline_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="Airline Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/flight_image" />

    <TextView
        android:id="@+id/flight_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/flight_number_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/airline_logo"
        app:layout_constraintEnd_toStartOf="@+id/airline_logo"
        app:layout_constraintTop_toTopOf="@+id/airline_logo" />

    <TextView
        android:id="@+id/flight_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/flight_number"
        app:layout_constraintStart_toStartOf="@+id/flight_number_label"
        app:layout_constraintTop_toBottomOf="@+id/flight_number_label" />

    <TextView
        android:id="@+id/destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/destination_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/airline_logo"
        app:layout_constraintStart_toEndOf="@+id/airline_logo"
        app:layout_constraintTop_toTopOf="@+id/airline_logo" />

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/destination_des"
        app:layout_constraintStart_toStartOf="@+id/destination_label"
        app:layout_constraintTop_toBottomOf="@+id/destination_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
