<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="trivia.ui.QuestionsAttempt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/submitButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="45sp"
                        android:text="@string/tSubmitButton" />


                </LinearLayout>

                <TextView
                    android:id="@+id/usernameAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tUname"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/categoryTypeAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tCategory"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/numberOfQuestionsAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalquestion"
                    android:gravity="center"
                    android:textSize="20sp"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>