<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/aviationRecycleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput" />

            <EditText
                android:id="@+id/textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_airport_code"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@+id/SavedButton"
                app:layout_constraintEnd_toStartOf="@+id/SearchButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                />

            <Button
                android:id="@+id/SearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="8dp"
                android:text="@string/search"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/SavedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="8dp"
                android:text="@string/saved"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>
